public class Tanque {
    public int capacidad;

    public Tanque() {
        this.capacidad = 40;
    }

    public Tanque(int capacidad) {
        this.capacidad = capacidad;
    }

    public int getCapacidad() {
        return capacidad;
    }
}
